styles/style.css
*{
  margin: 0px;
  padding: 0px;
}

@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');

body{
  background-color: #f5f8ff;
}

.raleway-fonts {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
}


/* header */
.header{
  width: 99.9%;
  height: 580px;
  background-image: url('/images/Hero-bg.png');
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
.navbar{
  width: 1140px;
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
  padding-top: 20px;
}
.hero-content {
  text-align: center;
  margin-top: 100px;
}
.logo{
  font-weight: 900;
}
.header-title{
  font-size: 65px;
  color: #252432;
  margin-bottom: 20px;
}

.btn{
 background-color: #4E47FF;
  color: #FFFFFF;
  border-radius: 8px;
  border: none;
  padding: 10px 20px;
  font-weight: 600;
  cursor: pointer;
}
.btn:hover {
  background-color: #3a36d1;
}

.heading{
  color: brown;
  text-align: center;
}

/* shared styles */
.primary-color{
  color: #4E47FF;
}





/* action starts */
.action-section{
  max-width: 1140px;
  height: 328px;
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin: 60px auto;
}
.action-content {
  max-width: 512px;
}
.action-title{
  font-size: 42px;
  color: #252432;
  font-weight: 700;
  margin-bottom: 24px
}

.action-desc{
  font-weight: 600;
  margin-bottom: 20px;
  font-size: 16px;
  color: #7e7e7e;
}

.action-img img{
width: 403px;
height: 328px;
border-radius: 24px;
object-fit: cover;
}

/* action ends */


/* user section starts */
.user-section{
  width: 1140px;
  height: 206px;
  margin: 0 auto;
  background-color: rgb(215, 219, 224);
  padding-top: 40px;
  border-radius: 10px;
}
.user-main-title{
  text-align: center;
  font-size: 38px;
  font-weight: 700;
  color: #252432;
}
.user-items{
  display: flex;
  width: 856px;
  height: 206px;
  margin: 0 auto;
  justify-content: space-between;
}
.user-title{
  font-size: 45px;
  font-weight: 700;
  color: #4E47FF;
  margin-top: 20px;
  margin-bottom: 12px;
}
.user-desc{
  color: #252432;
}
/* user section ends */


/* feedback */
.feedback{
  margin-top: 120px;
}
.img-container{
  margin-top: 24px;
}
.feedback-cards{
  display: flex;
  justify-content: space-between;
  width: 1140px;
  height: 243px;
  margin: 0 auto;
  gap: 16px;
}
.feedback-card{
 padding-left: 20px;
 width: 367px;
 height: 243px;
 background-color: #FFFFFF;
 border-radius: 8px;
 margin-top: 30px;
}
.feedback-main-title{
  font-size: 38px;
  font-weight: 700;
  text-align: center;
  color: #252432;
  margin-bottom: 20px;
  margin-top: 30px;
}
.feedback-title{
  font-size: 30px;
  font-weight: 700;
  color: #252432;
  margin-top: 10px;
  margin-bottom: 12px;
}
.feedback-desc{
  font-weight: 600;
  font-size: 16px;
  font-weight: 500;
  color: #7e7e7e;
  margin-bottom: 16px;
  margin-top: 12px;
}

.feedback-card-user{
  display: flex;
  gap: 8px;
}

.name{
  font-weight: 600;
  opacity: .6;
  margin-left: 12px;
}
.date{
  opacity: .5;
  margin-left: 12px;
}



/* focus starts */
.focus-section {
  max-width: 1140px;
  margin: 120px auto;
  text-align: center;
  padding: 20px;
  background-color: #FFFFFF;
  border-radius: 10px;
  /* padding: 60px 20px; */
}

.focus-title {
  font-size: 32px;
  font-weight: 700;
  color: #252432;
  margin-bottom: 10px;
}

.focus-subtitle {
  font-size: 16px;
  color: #7e7e7e;
  margin-bottom: 20px;
}

.btn {
  background-color: #4E47FF;
  color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 10px 24px;
  font-weight: 600;
  cursor: pointer;
}

.btn:hover {
  background-color: #3a36d1;
}

.focus-image {
  margin-top: 40px;
}

.focus-image img {
  width: 840px;
  height: auto;
  border-radius: 48px;
  object-fit: cover;
  display: block;
  margin: 0 auto;
}
/* focus ends */


/* contact starts */
.contact-section{
  max-width: 1140px;
  display: flex;
  gap: 30px;
  height: 600px;
  margin: 0 auto;
}
.contact-title{
  font-size: 97px;
  font-weight: bold;
  color: #252432;
  margin: auto;
}
.form{
  display: flex;
  flex-direction: column;
  margin: auto;
  width: 100%;
  max-width: 490px;
}
.form input{
  height: 70px;
  border: gray;
  border-radius: 8px;
  color: #FFFFFF;
  margin-bottom: 30px;
  padding-left: 12px;
}
.form label{
  font-size: 18px;
  color: #252432;
  margin-bottom: 8px;
}

.form textarea{
  color: #FFFFFF;
  height: 135px;
  margin-bottom: 30px;
  border: none;
  padding-left: 12px;
  padding-top: 16px;
  border-radius: 8px;
}
.contact-btn{
  height: 70px;
}



/* contsacts ends */











/* footer */
/* .footer{
  width: 1356px;
  height: 428px;
  background-color: #FFFFFF;
  border: 1px solid red;
  text-align: center;
}
.footer-content{
  margin: 0 auto;
  height: 221px;
  width: 531px;
  border: 1px solid blue;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.footer-title{
  font-size: 50px;
}
.footer-desc{
  color: #8987A1;
}
.footer-links{
  display: flex;
  justify-content: space-between;
  border: 1px solid blue;
} */

